--- a/portapp/static/main.css
+++ b/portapp/static/main.css
@@ -1,3 +1,82 @@
+
+@media(max-width:400px){
+  #cname{
+    width: 250px;
+
+  }
+  
+}
+@media(max-width:400px){
+  #cemail{
+    width: 250px;
+
+  }
+  
+}
+
+@media(max-width:400px){
+  #tarpro{
+    width: 20em;
+  }
+  }
+
+  @media(max-width:400px){
+    #arrow{
+      margin-top:50px;
+      
+
+    }
+    }
+    @media(max-width:400px){
+      #arrow2{
+        font-size: 1.5em;
+  
+      }
+      }
+      @media (max-width:400px){
+        #imgperfil{
+          margin-left: 70px;
+        }
+      }
+      @media(max-width:400px){
+        #cardpres{
+          justify-content: center;
+          display: flex;
+          width: 25em;
+          margin-left: 20px;
+          
+        }
+        
+      }
+      @media(max-width:400px){
+        #bigtitle{
+          justify-content: center;
+          font-size: 5em;
+          margin-left: 40px
+        }
+        
+      }
+      @media(max-width:400px){
+        #bigtitle2{
+          justify-content: center;
+          font-size: 5em;
+          margin-top: 100px;
+        }
+        
+      }
+      @media(max-width:400px){
+        #imgpro{
+        margin-top: 90px;
+        margin-left: 4px;
+        }
+        
+      }
+      @media(max-width:400px){
+        #projects{
+        margin:35px;
+        }
+        
+      }
 body{
     background-image: url("https://64.media.tumblr.com/dea2ced6807fa3d2f2b3c5af4f6f21de/341b68d85d44ee77-1a/s400x600/c6b7ddb4a83dfd2e1b7bc2c8363942349eb034cd.gifv");
     background-repeat: no-repeat;
@@ -16,6 +95,8 @@ body{
     border-radius: 20px;
     
 }
+
+
 
   .btn {
     
@@ -96,6 +177,7 @@ body{
     -15px -15px 30px #1b1b1b60;
     
 }
+
 #titulo{
     font-family: 'Heebo', sans-serif;
     font-weight: 100;
@@ -110,13 +192,21 @@ body{
 }
 #bigtitle{
     font-family: 'Archivo Black', sans-serif;
-    font-weight: 400;
-    font-size: 6em;
-    text-align: center;
+    font-weight: 9em;
+    font-size: 5em;
     color: black;
-
-
+    text-align: center;
 }
+#bigtitle2{
+  font-family: 'Archivo Black', sans-serif;
+  font-weight: 9em;
+  font-size: 5em;
+  color: black;
+  text-align: center;
+  margin: 5px;
+}
+
+
 #navtitle{
     font-family: 'Anton', sans-serif;
     font-weight: 900;
